# grown-up-boy

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.bat  build.sh  compile_commands.json  run.bat  shell.nix
core/: CMakeLists.txt  gameboy.cpp  gameboy.hpp  gameboy_master.hpp  logger.hpp  mnemonics.hpp  profile.hpp  registers.cpp  registers.hpp  time.cpp  time.hpp  timer.cpp  timer.hpp  types.hpp
core/components/bus/: bus.cpp  bus.hpp
core/components/cartridge/: cartridge.cpp  cartridge.hpp  cartridge_factory.cpp  cartridge_factory.hpp
core/components/cpu/: cpu.cpp  cpu.hpp  cycles.hpp  instructions.cpp  registers.cpp  registers.hpp
core/debug/: debugger.cpp  debugger.hpp  memory_inspector.cpp
core/util/: bitwise.hpp  event.hpp  file.cpp  file.hpp
core/util/assembler/: assembler.hpp  mnemonics.hpp
devices/: CMakeLists.txt  window.cpp  window.hpp
main/: cli.hpp  main.cpp  profile.hpp
src/: CMakeLists.txt  defs.h  event.hpp  game_boy.cpp  game_boy.h  gameboy.hpp  macros.h  main.cpp  mmu.cpp  mmu.h  register.h
src/bitwise/: CMakeLists.txt  bitwise.cpp
src/emulator/: bus.cpp  bus.h  cartridge.cpp  cartridge.hpp  cpu.cpp  cpu.h  defs.h  event_queue.h  game_boy.cpp  io_dispatcher.cpp  io_dispatcher.h  mmu.cpp  mmu.h  sync.h
src/emulator/devices/: joypad.cpp  joypad.h  timer.h
src/emulator/io/: audio.cpp  audio.h  interrupts.cpp  interrupts.h  joypad.cpp  joypad.h  lcd.cpp  lcd.h  timer.cpp  timer.h
src/file/: CMakeLists.txt  file.cpp
src/gameboy/: CMakeLists.txt  bus.hpp  cartridge.hpp  cartridge_factory.hpp  cpu.hpp  gameboy.cpp  gameboy.hpp  memory.hpp  mnemonics.hpp  timer.cpp  timer.hpp
src/gameboy/bus/: bus.cpp
src/gameboy/cartridge/: CMakeLists.txt  cartridge.cpp
src/gameboy/cartridge_factory/: CMakeLists.txt  cartridge_factory.cpp
src/gameboy/cpu/: CMakeLists.txt  cpu.cpp  cpu.hpp  instructions.cpp
src/gameboy/cpu/register_pair/: CMakeLists.txt  register_pair.cpp  register_pair.hpp
src/gameboy/debug/: debugger.cpp  debugger.hpp  memory_inspector.hpp
src/gameboy/memory/: CMakeLists.txt  memory.cpp
src/gameboy/timer/: CMakeLists.txt  timer.cpp  timer.hpp
src/time/: CMakeLists.txt  time.cpp  time.hpp
src/util/: event.hpp  file.cpp
util/: bitwise.cpp  bitwise.hpp  file.cpp  file.hpp  logger.hpp
